--- a/Dream_Flights/Views/Airlines/Edit.cshtml
+++ b/Dream_Flights/Views/Airlines/Edit.cshtml
@@ -1,41 +1,47 @@
 ﻿
 <div class="text-center">
-    <div class="container" style="width:100%;margin-top:2%">
-        <div class="row">
+    <div class="container" style="width:40%;margin-top:2%">
+       
             <form method="post" action="@Url.Action("Save", "Airlines")" enctype="multipart/form-data">
-                <div class="card" style="width: 18rem;margin-left:1%;margin-top:1%">
-                    <div class="form-floating mb-3">
-                        <input type="text" name="name" class="form-control" id="floatingname" placeholder="Name">
-                        <label for="floatingInput">Email address</label>
+              <div class="row">
+                <div class="col-md-4 mb-4">
+                  <div class="card mb-4">
+                    <div class="card-header py-3">
+                      <h5 class="mb-0">New Airline</h5>
                     </div>
-                    <div class="form-floating">
-                        <input type="text" name="phone" class="form-control" id="floatingphone" placeholder="Phone">
-                        <label for="floatingPassword">Password</label>
-                    </div>
-                     <div class="form-floating">
-                       <div class="dropdown">
-                              <button class="btn btn-secondary dropdown-toggle" type="button" id="drocountry" name="drocountry" data-bs-toggle="dropdown" aria-expanded="false">
-                                Country
-                              </button>
-                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                           @foreach (var item in ViewBag.CountriesModel)
-                           {  
-                                <li><a class="dropdown-item" href="">@item.cou_name</a></li>
-                           }
-                           </ul>
+                    <div class="card-body">
+                        <div class="form-outline mb-4">
+                          <input type="text" id="name" name="name" class="form-control" />
+                          <label class="form-label" for="form6Example4">Airline Name</label>
+                        </div>
+                        <div class="form-outline mb-4">
+                          <input type="text" id="phone" name="phone" class="form-control" />
+                          <label class="form-label" for="form6Example4">Airline Phone</label>
+                        </div>
+                        <div class="form-outline mb-4">
+
+                            @Html.DropDownListFor(CountriesModel => CountriesModel.id_country, (IEnumerable<SelectListItem>)ViewBag.cou_name, new { @class = "form-control" })
+                            <select class="form-select" name="country" aria-label="Select Country">
+                              <option selected>Select Country</option>
+                              @foreach (var item in @ViewBag.CountriesModel)
+                              {
+                              <option value="@item.id_country">@item.cou_name</option>
+                              }
+                            </select>
+                              
+                        </div>
+                        <div class="form-outline mb-4">
+                            <div class="file-upload-wrapper">
+                                <input type="file" name="photo" class="form-control" />
                             </div>
-                        
-                    </div>
-                    <div class="d-flex pt-1">
-                        <div class="file-upload-wrapper">
-                            <input type="file" name="photo" class="form-control" />
                         </div>
                     </div>
-                    <div class="card-footer">
-                        <button type="submit" class="btn btn-outline-primary me-1 flex-grow-1">Save</button>
+                    <div class=card-footer>
+                            <button type="submit" class="btn btn-outline-success">Save</button>
                     </div>
+                  </div>
                 </div>
+              </div>
             </form>
-        </div>
     </div>
 </div>
