--- a/Dream_Flights/Views/Login/Index.cshtml
+++ b/Dream_Flights/Views/Login/Index.cshtml
@@ -7,11 +7,11 @@
         <div class="card-body">
             <form asp-controller="Login" asp-action="LoginUser" method="post">
                 <div class="form-floating mb-3">
-                    <input type="email" required class="form-control" name="email" placeholder="name@example.com">
+                    <input type="email" required class="form-control" name="email" placeholder="name@example.com" value="stev.199279@gmail.com">
                     <label for="floatingInput">Email address</label>
                 </div>
                 <div class="form-floating">
-                    <input type="password" required class="form-control" name="password" placeholder="Password">
+                    <input type="password" required class="form-control" name="password" placeholder="Password" value="1234">
                     <label for="floatingPassword">Password</label>
                 </div>
                 <hr />
