--- a/Dream_Flights/Views/Airlines/Edit.cshtml
+++ b/Dream_Flights/Views/Airlines/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System.Collections
 
+@Html.Partial("userAccess") 
+
 <div class="text-center">
     <div class="container" style="width:100%;margin-top:2%">
        
