--- a/Dream_Flights/Views/Home/Index.cshtml
+++ b/Dream_Flights/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+@Html.Partial("userAccess") 
+
 <div class="text-center">
     <div class="card">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
