--- a/Dream_Flights/Views/SignIn/Index.cshtml
+++ b/Dream_Flights/Views/SignIn/Index.cshtml
@@ -2,58 +2,47 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container">
-    <div class="card">
-        <div class="card-body">
-                <form asp-controller="SignIn" asp-action="CreateUser" method="post" class="row g-3 needs-validation" novalidate>
-                      <div class="col-md-4">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" name="name" required>
-                        <div class="valid-feedback">
-                          Looks good!
-                        </div>
-                      </div>
-                      <div class="col-md-4">
-                        <label class="form-label">First name</label>
-                        <input type="text" class="form-control" name="first_name" required>
-                        <div class="valid-feedback">
-                          Looks good!
-                        </div>
-                      </div>
-                      <div class="col-md-4">
-                        <label class="form-label">Last name</label>
-                        <input type="text" class="form-control" name="last_name" required>
-                        <div class="valid-feedback">
-                          Looks good!
-                        </div>
-                      </div>
-                      <div style="margin-top:2%" class="col-md-4">
-                        <label class="form-label">Email</label>
-                        <div class="input-group has-validation">
-                          <input type="email" class="form-control" name="email" aria-describedby="inputGroupPrepend" required>
-                          <div class="invalid-feedback">
-                            Please enter an Email.
-                          </div>
-                        </div>
-                      </div>
-                      <div style="margin-top:2%"class="col-md-4">
-                        <label class="form-label">Password</label>
-                        <input type="password" class="form-control" name="password" required>
-                        <div class="invalid-feedback">
-                          Please provide a valid password.
-                        </div>
-                      </div>
-                      <div style="margin-top:2%" class="col-md-4">
-                        <label class="form-label">Repeat Password</label>
-                        <input type="password" class="form-control" name="password2" required>
-                        <div class="invalid-feedback">
-                          Please provide a valid password.
-                        </div>
-                      </div>
-                      <div class="col-12">
-                        <button style="margin-top:2%" class="btn btn-success" type="submit">Create user</button>
-                      </div>
-                </form>
-        </div>
-    </div>
-</div>
+
+<div class="row justify-content-center">
+<div class="col-md-4">
+<div class="card">
+<header class="card-header" style="text-align: center">
+	<h4 class="card-title mt-2">Sign up</h4>
+</header>
+<article class="card-body">
+ <form asp-controller="SignIn" asp-action="CreateUser" method="post" class="">  
+	<div class="form-row">
+		<div class="col form-group" >
+			<label>First name </label>   
+		  	<input type="text" class="form-control" placeholder="" name="first_name" required>
+		</div> <!-- form-group end.// -->
+		<div class="col form-group">
+			<label>Last name</label>
+		  	<input type="text" class="form-control" placeholder="" name="last_name" required>
+		</div> <!-- form-group end.// -->
+	</div> <!-- form-row end.// -->
+
+	<div class="form-group">
+		<label>Email address</label>
+		<input type="email" class="form-control" placeholder="" name="email" required>
+	</div> <!-- form-group end.// -->
+
+    <div class="form-row">
+		<div class="col form-group">
+			<label>Create password</label>
+	        <input class="form-control" type="password" name="pass1" required>
+		</div> <!-- form-group end.// -->
+		<div class="col form-group">
+			<label>Confirme password</label>
+	        <input class="form-control" type="password" name="pass2" required>
+		</div> <!-- form-group end.// -->
+	</div> <!-- form-row end.// -->
+
+    <div class="form-group">
+        <button type="submit" class="btn btn-success btn-block"> Register  </button>
+    </div> <!-- form-group// -->      
+</form>
+</article> <!-- card-body end .// -->
+<div class="border-top card-body text-center">Have an account? <a href="/Login">Log In</a></div>
+</div> <!-- card.// -->
+</div> <!-- col.//-->
