--- a/Dream_Flights/Views/Airlines/Index.cshtml
+++ b/Dream_Flights/Views/Airlines/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@Html.Partial("userAccess") 
+@*@Html.Partial("userAccess") *@
 
 <div class="text-center">
     <a href="@Url.Action("Edit", "Airlines")" class="btn btn-outline-primary me-1 flex-grow-1">New</a>
