--- a/Dream_Flights/Views/Login/Index.cshtml
+++ b/Dream_Flights/Views/Login/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container" style="width:50%;margin-top:10%">
+<div class="container" style="width:50%;margin-top:10%;">
     <div class="card">
         <div class="card-body">
             <form asp-controller="Login" asp-action="LoginUser" method="post">
