--- a/Dream_Flights/Views/Flights/Index.cshtml
+++ b/Dream_Flights/Views/Flights/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@*@Html.Partial("userAccess")*@
+@Html.Partial("userAccess")
 
 <div class="text-center">
     <div class="card">
