--- a/Dream_Flights/Views/Flights/Index.cshtml
+++ b/Dream_Flights/Views/Flights/Index.cshtml
@@ -62,7 +62,7 @@
             <div class="tab-pane fade" id="NewFlightDeparture" role="tabpanel" aria-labelledby="NewFlightDeparture-tab">
                 <div class="card" style="margin-top:5px">
                     <div class="card-header">
-                        <h4 style="text-align:center">New Flight Departure</h4>
+                        <h4 style="text-align:center">New Flight Departure asdasd</h4>
                     </div>
                     <div class="card-body">
                         <div class="row">
