--- a/Dream_Flights/Views/Airlines/Index.cshtml
+++ b/Dream_Flights/Views/Airlines/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@{ ViewData["Title"] = "Home Page"; }
 
 @Html.Partial("userAccess")
 
@@ -10,15 +8,15 @@
         <div class="row">
             @foreach (var item in @ViewBag.Arlines)
             {
-                <div class="card" style="width: 18rem;margin-left:1%;margin-top:1%">
+              <div class="card" style="width: 18rem;margin-left:1%;margin-top:1%">
                     <img src="@item.air_img" class="card-img-top" style="width:100%;height:90px">
                     <div class="card-body">
                         Name: <h5 class="card-title">@item.air_name</h5>
                         Phone: <p class="card-text">@item.air_phone</p>
                         Country: <p class="card-text">@item.air_country</p>
                     </div>
-                </div>
-            }
+              </div>          
+             }
         </div>
     </div>
 </div>
