--- a/Dream_Flights/Views/Login/Index.cshtml
+++ b/Dream_Flights/Views/Login/Index.cshtml
@@ -1,10 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@{ ViewData["Title"] = "Home Page"; }
 
-<div class="container" style="width:50%;margin-top:10%;">
+<body background="Images\Fondo login.jpeg">
+<div class="container" style="width:40%;margin-top:5%">
     <div class="card">
-        <div class="card-body">
+        <div class="card-header text-center text-dark bg-warning">
+            <p class="text-center"><h3><b>Welcome</b></h3></p>
+        </div>
+        <div class="card-body text-light bg-dark">
             <form asp-controller="Login" asp-action="LoginUser" method="post">
                 <div class="form-floating mb-3">
                     <input type="email" required class="form-control" name="email" placeholder="name@example.com" value="stev.199279@gmail.com">
@@ -15,11 +17,12 @@
                     <label for="floatingPassword">Password</label>
                 </div>
                 <hr />
-                <button type="submit" class="btn btn-success" style="float:right">Login</button>
+                <button type="submit" class="btn btn-warning text-dark" style="float:right"><b>Login</b></button>
             </form>
             <form asp-controller="SignIn" asp-action="Index" method="post">
-                <button type="submit" class="btn btn-primary" style="float:left">Sign In</button>
+                <button type="submit" class="btn btn-warning text-dark" style="float:left"><b>Sign In</b></button>
             </form>
         </div>
     </div>
 </div>
+</body>
