--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -6,50 +6,61 @@
     <title>@ViewData["Title"] - Dream Flights</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-warning" style="height:72px;">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Started" asp-action="Index">Dream Flights</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li id="Flights" hidden="hidden" class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Flights" asp-action="Index">Flights</a>
-                        </li>
-                        <li id="Airlines" hidden="hidden" class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Airlines" asp-action="Index">Airlines</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
-                        </li>
-                    </ul>
-                </div>
+                    <p class="navbar-brand" asp-area="" asp-controller="Started" asp-action="Index" style="margin-left:-750px" ><h3><b>Dream Flights</b></h3><img src="~/Iconos/globo.png" style="width:45px; height:45px;margin-left:-820px" /></p>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                         aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
             </div>
         </nav>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark" style="height:40px">
+                <div class="container-fluid">
+                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                        <ul class="navbar-nav flex-grow-1 text-center">
+                            <li class="nav-item">
+                                <a class="nav-link text-light" style="" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
+                            </li>
+                            <li id="Flights" hidden="hidden" class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights</b></a>
+                            </li>
+                            <li id="Airlines" hidden="hidden" class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines</b></a>
+                            </li>
+                            <li id="AdminUsers"hidden="hidden" class="nav-item">
+                                <a class="nav-link text-light" style="" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>Users</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action=""><b>Contact us</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
+                            </li>
+                            <li class="Logout">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Logout" style="float:left"><img src="~/Iconos/salida.png" style="width:30px; height:28px" /></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
     </header>
-    <div class="container-fluid" style="width: 100%;height: 50%;padding-left: 0px;padding-right: 0px;">
+    <div class="container-fluid" style="width: 100%;height: 580px;padding-left: 0px;padding-right: 0px;">
         <main role="main" class="" style="width:100%;height:100%">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-light bg-dark" style="text-align:center">
         <div class="container">
-            &copy; 2022 - Dream_Flights
+            &copy; 2022 - Dream_Flights 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
