--- a/Dream_Flights/Views/Started/Index.cshtml
+++ b/Dream_Flights/Views/Started/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container-fluid" style="width: 100%;height: 100%;padding-left: 0px;padding-right: 0px;">
+<div style="width: 100%;height: 100%;padding-left: 0px;padding-right: 0px;">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" style="">
         <div class="carousel-inner" style="">
             @{
