se empieza el buy

--- a/Dream_Flights/Views/AdminUsers/Index.cshtml
+++ b/Dream_Flights/Views/AdminUsers/Index.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "AdminUsers";
 }
 
-@*@@Html.Partial("userAccess")*@
+@Html.Partial("userAccess")
 
 <div class="card">
     <div class="card-header">
-        <h4 style="text-align:center">Users</h4>
+        <h4 style="text-align:center">User Management</h4>
     </div>
     <div class="card-body">
         <table class="table table-bordered table-responsive table-hover">
