--- a/Dream_Flights/Views/Airlines/Index.cshtml
+++ b/Dream_Flights/Views/Airlines/Index.cshtml
@@ -2,21 +2,82 @@
 
 @Html.Partial("userAccess")
 
+
+
 <div class="text-center">
-    <a href="@Url.Action("Edit", "Airlines")" class="btn btn-outline-primary me-1 flex-grow-1">New</a>
-    <div class="container" style="width:100%;margin-top:2%">
-        <div class="row">
-            @foreach (var item in @ViewBag.Arlines)
-            {
-              <div class="card" style="width: 18rem;margin-left:1%;margin-top:1%">
-                    <img src="@item.air_img" class="card-img-top" style="width:100%;height:90px">
-                    <div class="card-body">
-                        Name: <h5 class="card-title">@item.air_name</h5>
-                        Phone: <p class="card-text">@item.air_phone</p>
-                        Country: <p class="card-text">@item.air_country</p>
-                    </div>
-              </div>          
-             }
+    <div class="card">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="airlines-tab" data-bs-toggle="tab" data-bs-target="#airlines" type="button" role="tab" aria-controls="home" aria-selected="true">Airlines</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="new_airlines-tab" data-bs-toggle="tab" data-bs-target="#new_airlines" type="button" role="tab" aria-controls="sales" aria-selected="false">New Airlines</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="airlines" role="tabpanel" aria-labelledby="airlines-tab">
+             <div class="container-fluid" style="width:100%;">
+                <div class="row">
+                    @foreach (var item in @ViewBag.Arlines)
+                    {
+                      <div class="card" style="width: 18rem;margin-left:1%;margin-top:1%">
+                            <img src="@item.air_img" class="card-img-top" style="width:100%;height:90px">
+                            <div class="card-body">
+                                Name: <h5 class="card-title">@item.air_name</h5>
+                                Phone: <p class="card-text">@item.air_phone</p>
+                                Country: <p class="card-text">@item.air_country</p>
+                            </div>
+                      </div>          
+                     }
+                </div>
+            </div>
+            </div>
+            <div class="tab-pane fade" id="new_airlines" role="tabpanel" aria-labelledby="new_airlines-tab">
+             <div class="container" style="width:100%;margin-top:2%">
+        <form method="post" action="@Url.Action("Save", "Airlines")" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <div class="card mb-4">
+                        <div class="card-header py-3">
+                            <h5 class="mb-0">New Airline</h5>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-outline mb-4">
+                                <input type="text" id="name" name="name" class="form-control" required />
+                                <label class="form-label" for="form6Example4">Airline Name</label>
+                            </div>
+                            <div class="form-outline mb-4">
+                                <input type="text" id="phone" name="phone" class="form-control" required />
+                                <label class="form-label" for="form6Example4">Airline Phone</label>
+                            </div>
+
+                            <div class="form-outline mb-4">
+                                @Html.DropDownList("id_country", (IEnumerable<SelectListItem>)ViewBag.CountriesModel, null, new { @class = "form-control" })
+                            </div>
+                            <div class="form-outline mb-4">
+                                <div class="file-upload-wrapper">
+                                    <input type="file" name="photo" class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class=card-footer>
+                            <button type="submit" class="btn btn-outline-success" style="float:right">Save</button>
+        </form>
+        <form asp-controller="Airlines" asp-action="Index" method="post">
+            <button type="submit" class="btn btn-outline-danger" style="float:left">Cancel</button>
+        </form>
+
+
+    </div>
+</div>
+</div>
+            </div>
         </div>
     </div>
+</div>
+
+
+<div class="text-center">
+    <a href="@Url.Action("Edit", "Airlines")" class="btn btn-outline-primary me-1 flex-grow-1">New</a>
+    
 </div>
