--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -30,16 +30,19 @@
                                 <a class="nav-link text-light" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
                             </li>
                             <li id="Flights" hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights</b></a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a>
                             </li>
                             <li id="Airlines" hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines</b></a>
+                                <a class="nav-link text-light" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a>
                             </li>
                             <li id="AdminUsers"hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" style="" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>Users</b></a>
+                                <a class="nav-link text-light" style="" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action=""><b>Contact us</b></a>
+                            </li>
+                             <li id="" class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
