--- a/Dream_Flights/Views/BuyFlights/Index.cshtml
+++ b/Dream_Flights/Views/BuyFlights/Index.cshtml
@@ -5,70 +5,80 @@
 @*@Html.Partial("userAccess")*@
 
 <script>
-	debugger;
-   
-	var fly_number;
+    debugger;
+
+    var fly_number;
     var airline;
-	var destination;
-	var date;
-	var time;
-	var price;
-	function show(number) {
-			   var rowId = number;
-			   var data = document.getElementById(rowId).querySelectorAll(".row-data");
-			   fly_number = data[0].innerHTML;
-			   airline = data[1].innerHTML;
-			   destination = data[2].innerHTML;
-			   date = data[3].innerHTML;
-			   time = data[4].innerHTML;
-			   price = data[5].innerHTML;
-
-				alert("fly_number: " + fly_number + "\nairline: " + airline + "\ndestination: " + destination + "\ndate: " + date + "\ntime: " + time + "\nprice: " + price);
-			}
+    var destination;
+    var date;
+    var time;
+    var price;
 
 
- 
+    function show(number) {
+
+        var rowId = number;
+        var data = document.getElementById(rowId).querySelectorAll(".row-data");
+
+        window.open("https://localhost:7251/?amount="+data[5].innerHTML, "customWindow", "width=500, height=600,  left=960");
+
+
+
+        /*        
+        fly_number = data[0].innerHTML;
+        airline = data[1].innerHTML;
+        destination = data[2].innerHTML;
+        date = data[3].innerHTML;
+        time = data[4].innerHTML;
+        price = data[5].innerHTML;
+
+         alert("fly_number: " + fly_number + "\nairline: " + airline + "\ndestination: " + destination + "\ndate: " + date + "\ntime: " + time + "\nprice: " + price);*/
+    }
+
+
+
 </script>
 
 <div class="text-center">
     <div class="card">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
-               <button class="nav-link" id="BuyFlights-tab" data-bs-toggle="tab" data-bs-target="#BuyFlights" type="button" role="tab" aria-controls="4" aria-selected="false"> Buy Flights</button>
+                <button class="nav-link" id="BuyFlights-tab" data-bs-toggle="tab" data-bs-target="#BuyFlights" type="button" role="tab" aria-controls="4" aria-selected="false"> Buy Flights</button>
             </li>
         </ul>
         <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active" id="NewFlightArrival" role="tabpanel" aria-labelledby="NewFlightArrival-tab">
                 <div class="container-fluid">
-                      <table class="table table-bordered table-responsive table-hover" id="flytable">
-                            <tr>
-                                <th>Flight Number </th>
-                                <th>Airline </th>
-                                <th>Destination </th>
-                                <th>Date</th>
-                                <th>Time</th>
-                                <th>$</th>
-                                <th>Buy</th>
+                    <table class="table table-bordered table-responsive table-hover" id="flytable">
+                        <tr>
+                            <th>Flight Number </th>
+                            <th>Airline </th>
+                            <th>Destination </th>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>$</th>
+                            <th>Buy</th>
+                        </tr>
+                        @foreach (var item in ViewBag.buyflightsList)
+                        {
+                            <tr id="@item.fli_number">
+                                <td class="row-data" id="tdfly_@item.fli_number">@item.fli_number</td>
+                                <td class="row-data" id="tdair_@item.fli_number">@item.air_name</td>
+                                <td class="row-data" id="tddestination_@item.fli_number">@item.destination</td>
+                                <td class="row-data" id="tddate_@item.fli_number">@item.date</td>
+                                <td class="row-data" id="tdtime_@item.fli_number"> @item.time</td>
+                                <td class="row-data" id="tdprice_@item.fli_number">@item.price</td>
+                                <td>
+                                    <button id="btn_@item.fli_number" class="btn btn-success" type="button" onclick="show(@item.fli_number)">
+                                        <!---data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"-->
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
+                                            <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"></path>
+                                        </svg>
+                                    </button>
+                                </td>
                             </tr>
-                            @foreach (var item in ViewBag.buyflightsList)
-                            {
-                                <tr id="@item.fli_number">
-                                    <td class="row-data" id="tdfly_@item.fli_number">@item.fli_number</td>
-                                    <td class="row-data" id="tdair_@item.fli_number">@item.air_name</td>
-                                    <td class="row-data" id="tddestination_@item.fli_number">@item.destination</td>
-                                    <td class="row-data" id="tddate_@item.fli_number">@item.date</td>
-                                    <td class="row-data" id="tdtime_@item.fli_number"> @item.time</td>
-                                    <td class="row-data" id="tdprice_@item.fli_number">@item.price</td>
-                                    <td>
-                                        <button id="btn_@item.fli_number" class="btn btn-success" type="button"  onclick="show(@item.fli_number)"> <!---data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"-->
-                                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-airplane-fill" viewBox="0 0 16 16">
-                                                <path d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Z"></path>
-                                             </svg>
-                                        </button>
-                                     </td>
-                                </tr>
-                            }
-                        </table>                        
+                        }
+                    </table>
                 </div>
             </div>
         </div>
@@ -82,7 +92,7 @@
     </div>
     <div class="offcanvas-body">
         <div>
-          I will not close if you click outside of me.
+            I will not close if you click outside of me.
         </div>
     </div>
 </div>
